Mapping jdk16 foreign incubator types to release foreign types